assets/stylesheets/default.css
header a:link {
    text-decoration: none;
    color:#3d6e71;
}

header a:visited {
    text-decoration: none;
    color: #3d6e71;
}

header a:hover {
    text-decoration: underline;
}

footer a:link{
    color: #ffffff;
    text-decoration: none;
}

footer a:visited {
    color: #ffffff;
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}

/*                        Public Master Page                      */

/* Main Content Style */
#public_main{
    background-color: #ffffff;  
    padding: 2%;
    font-size: 18px;
    align-items: center;
    text-align: center;
}

#slider{
    position: relative;
    text-align: center;
}

.bx-caption{
    padding-top: 5px;
    padding-bottom: 20px;
    max-width: 600px;
}

.bx-wrapper{
    margin-left: auto;
    margin-right: auto;
    /* height: 825px; */
    height: auto;
    width: auto;
    background-color: rgb(31, 30, 30);
}

#sliderframe{
    align-self: center;
    text-align: center;
    /* height: 675px; */
    height: auto;
}

#sliderframe img{
    max-height: 100%;
    align-self: center;
}

#description {
    z-index: 99;
}

/* Header Style */


/* Create a header that is a 5 column, 3 row grid for the navigation */
#banner {
    height: auto;
    width: auto;
}

#public_header{
    background-color: #ffffff;
    font-size: 16px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: #3d6e71;
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-rows: 50px 50px 50px;
    padding-top: 20px;
    border-bottom: 1px solid #3d6e71;
}

/* Public Navigation Bar Style */

/* Logo in the grid */
#ccc_logo_grid_item{
    grid-column: 1 / 2;
    grid-row: 1 / 4;
    align-items: left;
}

/* Logo on home page*/
#ccc_logo_homepage {
    display: block;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
}

/* Welcome div home page */
#ccc_welcome_message p {
    border-style: solid;
    padding: 20px 100px 20px 100px;
    text-align: center;
    margin-top: -3px;
    margin-left: auto;
    margin-right: auto;
    width: 75%;
    font-size: larger;
}

/* Login in the grid to the right upper side */
#login_header_item{
    grid-row: 1;
    grid-column: 5 / 6;
    text-align: right;
    margin-right: 10px;
    margin-left: 70%;
}

#notification_bell{
    grid-row: 1;
    grid-column: 5 / 6;
    right: 75px;
    position: absolute;
    text-align: right;
    margin-right: 10px;
}

/* Main content of the naviagtion for the public side, 
will have its own internal grid after being assigned a large area of the current grid for the header */
#public_header_row{
    grid-column: 2 / 6;
    grid-row: 2 / 4;
    text-align: left;
    font-size: 20px;
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    padding-right: 20px;
}

/* Link Navigation Bar Style for Public */

/* Grid position for home link */
#public_header_grid_item_1{
    grid-column: 1;
}

/* Grid position for calendar link */
#public_header_grid_item_2{
    grid-column: 2;
}
/* Grid position for request link */
#public_header_grid_item_3{
    grid-column: 3;
}

/* Grid position for contact and information dropdown */
#public_dropdown{
    grid-column: 4;
    z-index: 999;
}

/* Dropdown Navigation for Contact and Information */
/* Dropdown content style */
#public_contact_dropdown_content{
    display: none;
    width: 75%;
    align-items: left;
    padding: 5px;
    background-color: white;
    list-style-type: none;
    border: 1px solid black;
}

/* Dropdown content li styling */
#public_contact_dropdown_content li{
    padding: 5px 0px 0px 5px;
    margin: 3px 3px 3px 3px;
}

/* Dropdown hover for contact and information */
#public_dropdown:hover #public_contact_dropdown_content {
    display: block;
}

/* Footer Style */

/* Footer for the public master page */

#public_footer {
    display: grid;
    grid-template-rows: 50px 150px;
    height: 250px;
    color: #FFFFFF;
    clear: both;
    background-color: #353535;
}

#public_sitemap{
    grid-row: 1;
    background-color: #284B63;
    color: #ffffff;
    text-align: center;
}

#public_contact_name{
    font-size: 20px;
    font-weight: bold;
}

#public_sitemap ul{
    list-style-type: none;
    width: inherit;
}

#public_sitemap ul li{
    display: inline;
    color: #ffffff;
    padding: 0px 20px 20px 0px;
}

#public_contact_info{
    grid-row: 2;
    text-align: center;
    padding-right: 20px;
    color: #ffffff;
    background-color: #353535;
    margin-bottom: -10px;
}

/*                        Private Master Page                      */

/* Main Content Style */
#private_main{
    background-color: #ffffff;  
    padding: 2%;
}

/* Header Style */

/* Create a header that is a 5 column, 3 row grid for the navigation */
#private_header{
    background-color: #ffffff;
    font-size: 16px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: #3d6e71;
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-rows: 50px 50px 50px;
    padding-top: 20px;
    border-bottom: 1px solid #3d6e71;
}

/* Private Naviagation Bar Style */

/* Logo in the grid */
/* See the in the public master section, exactly the same */

/* Welcome user in the grid */
#welcome_user{
    grid-row: 1;
    grid-column: 3 / 4;
    text-align: center;
}

#notification_icon{
    width: 40px;
    height: 35px;
}

#notification_inbox {
    grid-row: 1;
    grid-column: 4 / 5;
    text-align: right;
}

/* Login in the grid to the right upper side */
#logout_header_item{
    grid-row: 1;
    grid-column: 5 / 6;
    text-align: right;
    margin-right: 10px;
}

/* Login form */
#login_form{
    border-style: solid;
    border-width: 2px;
    width: 500px;
    height: 200px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

#login_form input{
    margin-top: 20px;
}

/* Main content of the naviagtion for the public side, 
will have its own internal grid after being assigned a large area of the current grid for the header */
#private_header_row{
    grid-column: 2 / 6;
    grid-row: 2 / 4;
    text-align: left;
    font-size: 20px;
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    padding-right: 20px;
}

/* Link Navigation Bar Style for Public */

/* Grid position for home link */
#private_header_grid_item_1{
    grid-column: 1;
}

/* Grid position for calendar link */
#private_header_grid_item_2{
    grid-column: 2;
}
/* Grid position for request link */
#private_header_grid_item_3{
    grid-column: 3;
}

/* Grid position for contact and information dropdown */
#private_dropdown{
    grid-column: 4;
}

/* Dropdown Navigation for  */
/* Dropdown content style */
#private_contact_dropdown_content{
    display: none;
    width: 75%;
    align-items: left;
    padding: 5px;
    background-color: white;
    list-style-type: none;
    border: 1px solid black;
}

/* Dropdown content li styling */
#private_contact_dropdown_content li{
    padding: 5px 0px 0px 5px;
    margin: 3px 3px 3px 3px;
}

/* Dropdown hover for contact and information */
#private_dropdown:hover #private_contact_dropdown_content {
    display: block;
}

/* Footer Style */

/* Footer for the public master page */
#private_footer{
    display: grid;
    grid-template-rows: 50px 150px;
    height: 200px;
    color: #FFFFFF;
}

#private_sitemap{
    grid-row: 1;
    background-color: #284B63;
    color: #ffffff;
    text-align: center;
}

#private_contact_name{
    font-size: 20px;
    font-weight: bold;
}

#private_sitemap ul{
    list-style-type: none;
    width: inherit;
}

#private_sitemap ul li{
    display: inline;
    color: #ffffff;
    padding: 0px 20px 20px 0px;
}

#private_contact_info{
    grid-row: 2;
    text-align: center;
    padding-right: 20px;
    color: #ffffff;
    background-color: #353535;
}

/* Directory Page */
#member_info {
    background-color: #284B63;
    color: #ffffff;
    padding: 5px;
    border-radius: 10px;
    width: 45%;
    display: inline-block;
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 5px;
    margin-bottom: 5px;
    text-align: center;
}

/* Notifications Page */

aside {
    width: 28%;
    border-style: solid;
    border-width: 2px;
    height: 500px;
    float: left;
    margin-bottom: 10px;
    overflow: scroll;
    overflow-x: hidden;
}

.notification {
    margin-top: -20px;
}

.notification :hover{
    background-color: #284B63;
    color: #ffffff;
}

.notification h3 {
    text-align: center;
    border-bottom: solid;
    border-width: 1px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 5px;
    padding-right: 5px;
}

.notification a {
    text-decoration: none;
    color: inherit;
}

#notifications_main {
    clear: left;
	padding: 0 10px 0px;
    width: 68%;
	float: right;
    border-style: solid;
    border-width: 2px;
    height: 500px;
    padding-bottom: 50px;
}

#notifications_main h2 {
    padding-left: 20px;
}

#notifications_main p {
    padding-left: 20px;
}

.notification_info {
    float: left;
    width: 60%;
    height: 50%;
    margin-top: 20px;
}

.participating {
    float: left;
    border-style: solid;
    border-width: 2px;
    width: 30%;
    height: 50%;
    overflow: scroll;
    overflow-x: hidden;
    margin: 20px;
    border-radius: 5px;
}

#participating_members {
    list-style-type: none;
}

#participating_members li {
    padding-bottom: 10px;
}

.date {
    float: left;
    width: 50%;
    height: 15%
}

.color {
    float: left;
    width: 50%;
    height: 15%;
}

#color {
    float: left;
    width: 30%;
}

#color_box {
    float: left;
    width: 40%;
    height: 100%;
    background-color: inherit;
    color: #A9A9A9;
    border-style: solid;
    border-radius: 10px;
    border-width: 2px;
    font-size: 18px;
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;
}

.response {
    float: left;
    width: 100%;
    margin-top: 25px;
    display: flex;
    align-items: center;
}

.response h2 {
    float: left;
}

.response button {
    float: left;
    margin-left: 50px;
    width: 100px;
    height: 35px;
    border-radius: 10px;
    font-weight: bold;
}

#accept {
    background-color: #84b93c;
}

#decline {
    background-color: #e61610;
}


/* Request Form page */
* {
    margin: 5px;
}

label {
    border: 10px;
}

#addColor {
    border-color: black;
    border-width: 2px;
    border-style: solid;
    padding: 2px;
}

#requestFrame {
    margin-left: auto;
    margin-right: auto;
    /* width: 650px; */
    width: 75%;
}

/* Calendar page */

#calendarMonth {
    margin-left: auto;
    margin-right: auto;
    border-color: black;
    border-width: 2px;
    border-style: solid;
    padding: 2px;
}

#calendarFrame {
    margin-left: auto;
    margin-right: auto;
    /* width: 75%; */
    width:671px;
}

#calendarTable {
    border: 1px solid black;
    border-collapse: separate;
}

.calendarCell { 
    height: 25%;
    width: 14%;   
    padding-right:7%;
    padding-bottom:10%;
}

.calendarCell:hover {
    background-color: rgb(64, 7, 66);
    color: white;
}

/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
What page(s) is this for?
*/

#center_text {
    text-align: center;
}

#centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

p {
    font-size: 20px;
}

hr {
    height: 1px;
    border: none;
    background: black;
}

#smaller_font{
    font-size: 15px;
}

